# ResFit

./: CMakeLists.txt  README  README.md
examples/: run.sh  run_contour.sh  run_minimize.sh  run_newminos.sh  test_10evt_3Res.root
include/: AnalyticPhi23.h  CalDerivation.h  Contour.h  Header.h  NewMinos.h  SetMatrix.h  transformer.h
src/: AnalyticPhi23.cpp  Base.cpp  CalDerivation.cpp  Chi2_Test.cxx  Contour.cpp  Contour_Test.cxx  Fitter.cpp  Minimize_Test.cxx  NewMinos_Test.cpp  SetMatrix.cpp  transformer.cpp
